# cryptmalloc

./: CMakeLists.txt  Cargo.toml
benches/: block_benchmarks.rs  crypto_benchmarks.rs
benchmarks/: CMakeLists.txt  allocator_benchmarks.cpp  benchmark_main.cpp  bfv_benchmarks.cpp  bfv_operations_benchmarks.cpp  comparison_benchmarks.cpp  crypto_benchmarks.cpp  encrypted_types_benchmarks.cpp
docs/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt  basic_encryption.rs  basic_encryption_demo.cpp
include/cryptmalloc/: allocator.hpp  bfv_comparisons.hpp  bfv_context.hpp  bfv_operations.hpp  core.hpp  encrypted_block.hpp  encrypted_types.hpp  memory_pool.hpp  openfhe_context.hpp
src/: allocator.rs  arena.rs  bfv_comparisons.cpp  bfv_context.cpp  bfv_operations.cpp  core.cpp  encrypted_block.cpp  encrypted_option.rs  encrypted_ptr.rs  encrypted_types.cpp  evm.rs  keys.rs  lib.rs  main.cpp  memory_pool.cpp  openfhe_context.cpp  slab.rs
src/allocator/: block.rs  core.rs  mod.rs  pool.rs
src/crypto/: error.rs  mod.rs  noise.rs  operations.rs  tfhe_context.rs
src/types/: comparison.rs  encrypted_bool.rs  encrypted_int.rs  mod.rs  structures.rs
tests/: CMakeLists.txt  benchmark_bfv_comparisons.cpp  benchmark_bfv_context.cpp  benchmark_bfv_operations.cpp  benchmark_crypto_ops.cpp  benchmark_encrypted_types.cpp  block_tests.rs  crypto_tests.rs  integration_tests.rs  pool_tests.rs  test_bfv_comparisons.cpp  test_bfv_context.cpp  test_bfv_operations.cpp  test_bfv_thread_safety.cpp  test_encrypted_block.cpp  test_encrypted_types.cpp  test_main.cpp  test_memory_pool.cpp  test_openfhe_basic.cpp  test_serialization_enhanced.cpp
