[package]
name = "cryptmalloc"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
authors = ["Cryptmalloc Contributors"]
description = "Cryptographic memory allocation primitives leveraging TFHE-rs fully homomorphic encryption."
license = "Apache-2.0"
repository = "https://example.com/cryptmalloc"
documentation = "https://example.com/cryptmalloc/docs"
readme = "README.md"
keywords = ["fhe", "tfhe", "cryptography", "allocator"]
categories = ["cryptography", "memory-management"]

[dependencies]
tfhe = { version = "0.8", features = ["shortint", "boolean", "integer", "seeder_unix"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sha2 = "0.10"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
thiserror = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "crypto_benchmarks"
harness = false
